--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,9 @@ img{
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
 }
+
+h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
